force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Account_Action__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account_Action__c</fullName>
    <label>Account Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Revise</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>