force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Account_Filter_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account_Filter_Amount__c</fullName>
    <description>ACH Analysed Account Filter Amount. Displayed through Analyzed Account at Order Entry.</description>
    <label>Account Filter Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>