force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Analyzed_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Analyzed_Account_Type__c</fullName>
    <description>This picklist field indicates the type of analyzed account that you can associate with the treasury service. This field is not required and you may customize the value(s) to match your financial institution&apos;s needs.</description>
    <label>Analyzed Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DDA</fullName>
                <default>true</default>
                <label>DDA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>