force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Batch_Import_to_this_Name_ID_Required__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Batch_Import_to_this_Name_ID_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch Import to this Name/ID Required</label>
    <type>Checkbox</type>
</CustomField>