force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__ERD__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__ERD__c</fullName>
    <label>ERD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DDA</fullName>
            </value>
            <value>
                <fullName>SVA</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>