force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Exception_Account_for_Returns__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exception_Account_for_Returns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Account for Returns</label>
    <type>Checkbox</type>
</CustomField>