force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Funding_Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Funding_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding Account</label>
    <type>Checkbox</type>
</CustomField>