force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Maximum_Deposit_Amount_Per_Check__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maximum_Deposit_Amount_Per_Check__c</fullName>
    <label>Maximum Deposit Amount Per Check</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>