force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Maximum_Dollar_Range__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maximum_Dollar_Range__c</fullName>
    <label>Maximum Dollar Range</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>