force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Positive_Pay__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Positive_Pay__c</fullName>
    <label>Positive Pay</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Reverse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>