force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Settlement_or_Offset_account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Settlement_or_Offset_account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Settlement or Offset account</label>
    <type>Checkbox</type>
</CustomField>