force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Stop_Payment__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Stop_Payment__c</fullName>
    <label>Stop Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>