force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Treasury_Service__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Treasury_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treasury Service</label>
    <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
    <relationshipLabel>Analyzed Accounts</relationshipLabel>
    <relationshipName>Analyzed_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>