force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Treasury_Service_Reference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Treasury_Service_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treasury Service Reference</label>
    <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
    <relationshipName>Deposit_Service_Rel</relationshipName>
    <type>Lookup</type>
</CustomField>