force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Wire_Daily_Limit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Wire_Daily_Limit__c</fullName>
    <label>Wire Daily Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>