force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Wire_Detail__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Wire_Detail__c</fullName>
    <label>Wire Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>